# django-logging-management-command

./: LICENSE  README.md  pyproject.toml
src/django_logging_management_command/: __init__.py  command.py
src/tests/: test_verbosity.py
